--- a/css/laptop.css
+++ b/css/laptop.css
@@ -26,7 +26,7 @@ ul {
 /* banner */
 
 .banner-img {
-    background-image: url(images/banner.jpg);
+    background-image: url(../images/banner.jpg);
     background-size: cover;
     position: relative;
     width: 100%;
